--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The band</title>
-  <link rel="stylesheet" href="./assets/ccs/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/responsive.css">
   <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
 </head>
 
@@ -19,7 +20,7 @@
         <li><a href="#tour">Tour</a></li>
         <li><a href="#contact">Contact</a></li>
         <li>
-          <a href="">
+          <a href="#">
             More
             <i class="nav-arrow-down ti-angle-down"></i>
           </a>
@@ -32,11 +33,15 @@
       </ul>
       <!-- End: Nav -->
 
-      <!-- Begin: Search button -->
+      <!-- Search button -->
       <div class="search-btn">
         <i class="search-icon ti-search"></i>
       </div>
-      <!-- End: Search button -->
+
+      <!-- Mobile menu button -->
+      <div id="mobile-menu" class="mobile-menu-btn">
+        <i class="menu-icon ti-menu"></i>
+      </div>
     </div>
 
     <div id="slider">
@@ -53,15 +58,15 @@
         <p class="section-sub-heading">We love music</p>
         <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <div class="row member-list">
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32 text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
           </div>
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32 text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
           </div>
-          <div class="col col-third text-center">
+          <div class="col col-third s-col-full mt-32 text-center">
             <p class="member-name">Name</p>
             <img src="./assets/img/band/member1.jpg" alt="Name" class="member-img">
           </div>
@@ -84,31 +89,31 @@
 
           <!-- Places -->
           <div class="row places-list">
-            <div class="col col-third">
+            <div class="col col-third mt-16 s-col-full">
                 <img src="./assets/img/places/place1.jpg" alt="New York" class="place-img">
                 <div class="place-body">
                     <h3 class="place-heading">New York</h3>
                     <p class="place-time">Fri 27 Nov 2016</p>
                     <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <button class="btn js-buy-ticket">Buy Tickets</button>
+                    <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                 </div>
             </div>
-            <div class="col col-third">
+            <div class="col col-third mt-16 s-col-full">
                 <img src="./assets/img/places/place2.jpg" alt="New York" class="place-img">
                 <div class="place-body">
                     <h3 class="place-heading">Paris</h3>
                     <p class="place-time">Sat 28 Nov 2016</p>
                     <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <button class="btn js-buy-ticket">Buy Tickets</button>
+                    <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                 </div>
             </div>
-            <div class="col col-third">
+            <div class="col col-third mt-16 s-col-full">
                 <img src="./assets/img/places/place3.jpg" alt="New York" class="place-img">
                 <div class="place-body">
                     <h3 class="place-heading">San Francisco</h3>
                     <p class="place-time">Sun 29 Nov 2016</p>
                     <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                    <button class="btn js-buy-ticket">Buy Tickets</button>
+                    <button class="btn s-full-width js-buy-ticket">Buy Tickets</button>
                 </div>
             </div>
           </div>
@@ -122,18 +127,18 @@
         <p class="section-sub-heading">Fan? Drop a note!</p>
 
         <div class="row contact-content">
-          <div class="col col-half contact-info">
+          <div class="col col-half s-col-full contact-info">
             <p><i class="ti-location-pin"></i>Chicago, US</p>
-            <p><i class="ti-mobile"></i>Phone: +00 151515</p>
-            <p><i class="ti-email"></i>Email: mail@mail.com</p>
+            <p><i class="ti-mobile"></i>Phone: <a href="tel:+00 151515">+00 151515</a></p>
+            <p><i class="ti-email"></i>Email: <a href="mailto:mail@mail.com">mail@mail.com</a></p>
           </div>
-          <div class="col col-half contact-form">
+          <div class="col col-half s-col-full contact-form">
             <form action="">
               <div class="row">
-                <div class="col col-half">
+                <div class="col col-half s-col-full">
                   <input type="text" name="" placeholder="Name" required id="" class="form-control">
                 </div>
-                <div class="col col-half">
+                <div class="col col-half s-col-full s-mt-8">
                   <input type="email" name="" placeholder="Email" required id="" class="form-control">
                 </div>
               </div>
@@ -142,7 +147,7 @@
                   <input type="text" name="" placeholder="Message" required id="" class="form-control">
                 </div>
               </div>
-              <input type="submit" class="mt-16 btn pull-right" value="Send">
+              <input type="submit" class="mt-16 btn pull-right s-full-width" value="Send">
             </form>
           </div>
         </div>
@@ -163,7 +168,7 @@
         <a href=""><i class="ti-twitter"></i></a>
         <a href=""><i class="ti-linkedin"></i></a>
       </div>
-      <p class="coppyright">Powered by <a href="#">w3.css</a></p>
+      <p class="copyright">Powered by <a href="#">w3.css</a></p>
     </div>
   </div>
 
@@ -206,6 +211,38 @@
     </div>
 
   </div>
+
+  <script>
+    var header = document.getElementById("header");
+    var mobileMenu = document.getElementById("mobile-menu");
+    var headerHeight = header.clientHeight;
+
+    // Đóng/mở mobile
+    mobileMenu.onclick = function () {
+      var isClose = header.clientHeight === headerHeight;
+      if (isClose) {
+        header.style.height = 'auto';
+      } else {
+        header.style.height = null;
+      }
+    }
+
+    // Tự động đóng khi chọn menu
+    var menuItems = document.querySelectorAll('#nav li a[href*="#"]')
+    for (var i = 0; i < menuItems.length; i++) {
+      var menuItem = menuItems[i];
+      
+      menuItem.onclick = function (event) {
+        var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav');
+        
+        if (isParentMenu) {
+          event.preventDefault()
+        } else {
+          header.style.height = null;
+        }
+      }
+    }
+  </script>
 
   <script>
     const buyBtns = document.querySelectorAll('.js-buy-ticket');
